--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,19 +2,17 @@
 <html lang="en-US">
 
 <head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <meta charset="utf-8">
-  <title>Model Registry</title>
-  <meta content="Model Registry" id="appName" name="application-name">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <link href="/images/favicon.ico" rel="icon" type="image/svg+xml">
+  <title>Patternfly Seed</title>
+  <meta id="appName" name="application-name" content="Patternfly Seed">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/svg+xml" href="/images/favicon.png">
+  <base href="/">
 </head>
 
 <body>
-<noscript>Enabling JavaScript is required to run this app.</noscript>
-<div id="root"></div>
+  <noscript>Enabling JavaScript is required to run this app.</noscript>
+  <div id="root"></div>
 </body>
 
 </html>
